package= { name= 'laser', version= '0.0.0', edition= '2021' }

[dependencies]
fehler = '*'
itertools = '*'
atomic_float = '*'
rand = '*'
rand_xoshiro = '*'
ravif = { git='https://github.com/kornelski/cavif-rs' }
rav1e = { version = "0.6.1", default-features = false, features = ["threading"] } # ravif misses pub use rav1e::color::PixelRange
num = { git= 'https://github.com/Matthias-Fauconneau/num' }
vector = { git= 'https://github.com/Matthias-Fauconneau/vector' }
image = { git= 'https://github.com/Matthias-Fauconneau/image' }
ui = { git= 'https://github.com/Matthias-Fauconneau/ui' }

#[patch.'https://github.com/Matthias-Fauconneau/ui']
#ui = {path='../ui'}
#[patch.'https://github.com/Matthias-Fauconneau/image']
#image = {path='../image'}
#[patch.'https://github.com/Matthias-Fauconneau/num']
#num = {path='../num'}
