package={ name= 'laser', version= '0.0.0', edition= '2021'}
bin= [{name= 'laser', path= 'main.rs'}]

[features]
avif=['dep:ravif','dep:rav1e']
default=['avif']

[dependencies]
fehler='*'
itertools='*'
atomic_float='*'
rand='*'
rand_xoshiro='*'
rand-distributions={package='rand_distr', version='*'}
ravif={git='https://github.com/kornelski/cavif-rs', optional=true}
rav1e={version= "0.6.1", default-features=false, features=["threading"], optional=true} # ravif misses pub use rav1e::color::PixelRange
num={git='https://github.com/Matthias-Fauconneau/num'}
vector={git='https://github.com/Matthias-Fauconneau/vector'}
image={git='https://github.com/Matthias-Fauconneau/image'}
ui={git='https://github.com/Matthias-Fauconneau/ui', features=['plot']}

[patch.'https://github.com/Matthias-Fauconneau/image']
image={path='../image'}
[patch.'https://github.com/Matthias-Fauconneau/ui']
ui={path='../ui'}
